--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 git+https://github.com/shill1729/alphavantage.git
-scipy
-quadprog
+scipy~=1.13.0
+quadprog~=0.1.12
 finnhub-python
-scikit-learn
-numpy
-streamlit
-pandas
+scikit-learn~=1.5.0
+numpy~=1.26.4
+streamlit~=1.34.0
+pandas~=2.2.2
+yfinance~=0.2.40
